[package]
name = "rustedbytes-bytepusher"
version = "0.1.0"
edition = "2024"
authors = ["Daniele Olmisani <daniele.olmisani@gmail.com>"]
description = "A complete BytePusher virtual machine implementation in Rust"
readme = "README.md"
license = "MIT"
keywords = ["vm", "emulator", "bytepusher"]
categories = ["emulators"]

[dependencies]
clap = { version = "4", features = ["derive"] }
minifb = "0.28.0"
rodio = { version = "0.20.1", default-features = false }

[profile.release]
opt-level = 3           # Maximum optimization level
lto = "fat"             # Link Time Optimization
codegen-units = 1       # Reduces parallelism but improves optimizations
panic = "abort"         # Avoids unwinding, reduces size
strip = true            # Removes debug symbols
overflow-checks = false # Disables overflow checks in release
