[package]
name = "rustedbytes-bytepusher"
version = "0.1.0"
edition = "2024"
authors = ["Daniele Olmisani <daniele.olmisani@gmail.com>"]
description = "A complete BytePusher virtual machine implementation in Rust"
license = "GPL-3.0"
repository = "https://github.com/mad4j/rustedbytes-bytepusher"
homepage = "https://github.com/mad4j/rustedbytes-bytepusher"
readme = "README.md"
keywords = ["vm", "emulator", "bytepusher"]
categories = ["emulators"]
exclude = ["/roms"]

[dependencies]
clap = { version = "4", features = ["derive"] }
minifb = "0.28.0"
rodio = { version = "0.20.1", default-features = false }

[profile.release]
opt-level = 3           # Maximum optimization level
lto = "fat"             # Link Time Optimization
codegen-units = 1       # Reduces parallelism but improves optimizations
panic = "abort"         # Avoids unwinding, reduces size
strip = true            # Removes debug symbols
overflow-checks = false # Disables overflow checks in release
